--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - conda info -a
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION builtins pytest
   - source activate test-environment
-  - conda install torchvision -c soumith
+  - conda install torchvision -c soumith | return 0
   - pip install -r requirements.txt
 # command to run tests
 script: py.test -v
