--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
     else
@@ -21,8 +20,9 @@ install:
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy=1.11 pytest
   - source activate test-environment
   - conda install torchvision -c soumith || return 0
+  - pip install -r requirements.txt
 # command to run tests
 script: py.test -v
