--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,9 @@ install:
     fi
   - bash miniconda.sh -b -p $HOME/miniconda
   - export OPATH="$PATH" && export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
+  - conda create -q -y -n test-environment python=$TRAVIS_PYTHON_VERSION pytest
   - source activate test-environment
-  - conda install torchvision -c soumith || source deactivate && export PATH="$OPATH"
+  - conda install -q -y torchvision -c soumith || export PATH="$OPATH"
   - pip install -r requirements.txt
 # command to run tests
 script: py.test -v
